--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'London (England) -- Juvenile fiction'
+- GITenberg
 title: Rollo in London
 url: http://www.gutenberg.org/ebooks/24182
